# First-CMake

./: CMakeLists.txt  FriendInfo.h  MyInfo.cpp  MyInfo.h  README.md  main.cpp
